--- a/Volcano.ipynb
+++ b/Volcano.ipynb
@@ -18,14 +18,16 @@
       "cell_type": "markdown",
       "source": [
         "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/12v1M7eNUXDem2RFR0TIsBe-NBgKjlny4?usp=sharing)\n",
-        "[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.13923664.svg)](https://doi.org/10.5281/zenodo.13923664)\n",
+        "[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.13923663.svg)](https://doi.org/10.5281/zenodo.13923663)\n",
+        "\n",
         "# Volcano Plot for Gene Expression Analysis\n",
         "\n",
         "---\n",
         "\n",
         "**Citation Note:**\n",
         "\n",
-        "Shakiba, M. (2024). moneuron/Volcano-Plot: Volcano-Plot (v1.0.0). Zenodo. https://doi.org/10.5281/zenodo.13923664\n",
+        "Shakiba, M. (2024). moneuron/Volcano-Plot: Volcano-Plot. Zenodo.\n",
+        "https://doi.org/10.5281/zenodo.13923663\n",
         "\n",
         "---"
       ],
