--- a/Volcano.ipynb
+++ b/Volcano.ipynb
@@ -23,12 +23,9 @@
         "# Volcano Plot for Gene Expression Analysis\n",
         "\n",
         "---\n",
-        "\n",
-        "**Citation Note:**\n",
-        "\n",
-        "Shakiba, M. (2024). moneuron/Volcano-Plot: Volcano-Plot. Zenodo.\n",
-        "https://doi.org/10.5281/zenodo.13923663\n",
-        "\n",
+        "```\n",
+        "Shakiba, M. (2024). moneuron/Volcano-Plot: Volcano-Plot. Zenodo. https://doi.org/10.5281/zenodo.13923663\n",
+        "```\n",
         "---"
       ],
       "metadata": {
@@ -38,8 +35,16 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Install Dependencies {display-mode: \"form\"}\n",
-        "!pip install matplotlib seaborn adjustText --quiet"
+        "#@title Import Libraries {display-mode: \"form\"}\n",
+        "!pip install matplotlib seaborn adjustText --quiet\n",
+        "\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import numpy as np\n",
+        "from matplotlib.lines import Line2D\n",
+        "from adjustText import adjust_text\n",
+        "from google.colab import files"
       ],
       "metadata": {
         "id": "eNevTW-LfAJI"
@@ -49,26 +54,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "kifbr2B5eBiI"
-      },
-      "outputs": [],
       "source": [
-        "#@title Import Dependencies {display-mode: \"form\"}\n",
-        "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "import numpy as np\n",
-        "from matplotlib.lines import Line2D\n",
-        "from adjustText import adjust_text\n",
-        "from google.colab import files"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title Upload the GEO .tsv file {display-mode: \"form\"}\n",
+        "#@title Upload the GEO **.tsv** file {display-mode: \"form\"}\n",
         "uploaded = files.upload()"
       ],
       "metadata": {
@@ -78,43 +65,20 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "#@title Load the data from the .tsv file {display-mode: \"form\"}\n",
-        "file_path = list(uploaded.keys())[0]  # Get the file name from uploaded files\n",
-        "data = pd.read_csv(file_path, sep='\\t')"
+        "\n",
+        "\n",
+        "---\n"
       ],
       "metadata": {
-        "id": "Bpdw1eQSfIe-"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "KJZmhFPWo46o"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "#@title Define the threshold for significance and genes of interest {display-mode: \"form\"}\n",
-        "\n",
-        "# Input the significance thresholds\n",
-        "pval_threshold = 0.05  #@param {type:\"number\"}\n",
-        "logfc_threshold = 0.58  #@param {type:\"number\"}\n",
-        "\n",
-        "# Input the genes of interest as a comma-separated string\n",
-        "genes_of_interest_input = \"MMP2, MMP7, MMP14\"  #@param {type:\"string\"}\n",
-        "\n",
-        "# Convert the input string into a list\n",
-        "genes_of_interest = [gene.strip() for gene in genes_of_interest_input.split(',')]"
-      ],
-      "metadata": {
-        "id": "4SSmV8JCgoJB"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title Define column names {display-mode: \"form\"}\n",
+        "#@title Define Column Names {display-mode: \"form\"}\n",
         "\n",
         "# Input column names\n",
         "pvalue = \"P.Value\"  #@param {type:\"string\"}\n",
@@ -130,11 +94,62 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Results {display-mode: \"form\"}\n",
+        "#@title Define Parameters {display-mode: \"form\"}\n",
+        "\n",
+        "# Input the significance thresholds\n",
+        "pval_threshold = 0.05  #@param {type:\"number\"}\n",
+        "logfc_threshold = 0.58  #@param {type:\"number\"}\n",
+        "\n",
+        "# Input the genes of interest as a comma-separated string\n",
+        "genes_of_interest_input = \"MMP2, MMP7, MMP14\"  #@param {type:\"string\"}\n",
+        "\n",
+        "# Convert the input string into a list\n",
+        "genes_of_interest = [gene.strip() for gene in genes_of_interest_input.split(',')]\n",
+        "\n",
+        "#@title Load the data from the .tsv file {display-mode: \"form\"}\n",
+        "file_path = list(uploaded.keys())[0]  # Get the file name from uploaded files\n",
+        "data = pd.read_csv(file_path, sep='\\t')"
+      ],
+      "metadata": {
+        "id": "4SSmV8JCgoJB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Get Results {display-mode: \"form\"}\n",
+        "\n",
+        "file_path = list(uploaded.keys())[0]  # Get the file name from uploaded files\n",
+        "data = pd.read_csv(file_path, sep='\\t')\n",
         "\n",
         "# Create the log10 transformation of the p-values\n",
         "data['-log10(P.Value)'] = -np.log10(data[pvalue])\n",
+        "\n",
+        "# Classify genes based on logFC and p-value\n",
+        "def sorter(row):\n",
+        "    if row[pvalue] < pval_threshold and row[logfc] > logfc_threshold:\n",
+        "        return 'A'\n",
+        "    elif row[pvalue] < pval_threshold and row[logfc] < -logfc_threshold:\n",
+        "        return 'A'\n",
+        "    else:\n",
+        "        return 'B'\n",
+        "\n",
+        "data['sort_key'] = np.where(data['logFC'] > 0, -data['logFC'], data['logFC'])  # Sorting key\n",
+        "\n",
+        "data['sort_key2'] = data.apply(sorter, axis=1)\n",
+        "\n",
+        "# Sort\n",
+        "data = data.sort_values(by=['sort_key2', 'sort_key', 'P.Value'])\n",
+        "\n",
+        "# Drop duplicates by 'Gene.symbol', keeping the best row based on the sort criteria\n",
+        "data = data.drop_duplicates(subset='Gene.symbol', keep='first')\n",
+        "\n",
+        "'''\n",
+        "old version:\n",
         "data = data.sort_values(by=pvalue).drop_duplicates(subset=symbol, keep='first')\n",
+        "'''\n",
         "\n",
         "# Classify genes based on logFC and p-value\n",
         "def classify_gene(row):\n",
@@ -172,36 +187,17 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Plotting settings {display-mode: \"form\"}\n",
+        "#@title Plotting {display-mode: \"form\"}\n",
         "\n",
         "# Input the plot size\n",
         "plot_width = 12  #@param {type:\"number\"}\n",
         "plot_height = 10  #@param {type:\"number\"}\n",
         "\n",
         "# Input colors for significant and non-significant genes\n",
-        "upregulated_color = \"crimson\"  #@param {type:\"string\"}\n",
-        "downregulated_color = \"navy\"  #@param {type:\"string\"}\n",
-        "non_significant_color = \"gray\"  #@param {type:\"string\"}"
-      ],
-      "metadata": {
-        "id": "96hPZdTgh4Nx"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "> Available colors › [Seaborn Palette](https://miro.medium.com/v2/resize:fit:1400/format:webp/1*zm6zVTIEvf9uZ0cE4n0Ogg.png)"
-      ],
-      "metadata": {
-        "id": "4L1_ec83KcOl"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title Plotting {display-mode: \"form\"}\n",
+        "upregulated_color = \"#fb4b4b\"  #@param {type:\"string\"}\n",
+        "downregulated_color = \"#0ec0fb\"  #@param {type:\"string\"}\n",
+        "non_significant_color = \"#161616\"  #@param {type:\"string\"}\n",
+        "\n",
         "\n",
         "# Create the volcano plot with paper-friendly coloring\n",
         "plt.figure(figsize=(plot_width, plot_height))  # Increased figure size for better label placement\n",
@@ -211,7 +207,7 @@
         "\n",
         "# Plot the points\n",
         "sns.scatterplot(x=logfc, y='-log10(P.Value)', data=data, hue='regulation',\n",
-        "                palette=palette, alpha=0.5, s=80, edgecolor=None)\n",
+        "                palette=palette, alpha=1, s=80, edgecolor=None)\n",
         "\n",
         "# Prepare text annotations for genes of interest and plot larger dots\n",
         "texts = []\n",
@@ -221,8 +217,8 @@
         "        plt.scatter(row[logfc], row['-log10(P.Value)'], s=100, color='white', zorder=5, edgecolor='black')\n",
         "\n",
         "        texts.append(plt.text(row[logfc], row['-log10(P.Value)'], row[symbol],\n",
-        "                              fontsize=10, color='black', ha='center', va='center',\n",
-        "                              bbox=dict(boxstyle='round,pad=0.3', edgecolor='black', facecolor='lightyellow', alpha=0.8)))\n",
+        "                              fontsize=11, color='black', ha='left', va='baseline',\n",
+        "                              bbox=dict(boxstyle='round,pad=0.4', edgecolor='black', facecolor='lightyellow', alpha=0.95)))\n",
         "\n",
         "# Adjust text positions to avoid overlaps\n",
         "adjust_text(texts,\n",
@@ -240,9 +236,9 @@
         "plt.axvline(logfc_threshold, linestyle='--', color='black', label=f'logFC = {logfc_threshold}')\n",
         "\n",
         "# Customize axis labels and title\n",
-        "plt.xlabel('Log2 Fold Change', fontsize=14)\n",
-        "plt.ylabel('-log10(P.Value)', fontsize=14)\n",
-        "plt.title('Volcano Plot of Differential Gene Expression', fontsize=16)\n",
+        "plt.xlabel('log2(fold change)', fontsize=14)\n",
+        "plt.ylabel('-log10(PValue)', fontsize=14)\n",
+        "# plt.title('Volcano Plot of Differential Gene Expression', fontsize=16)\n",
         "\n",
         "# Customize the legend\n",
         "custom_lines = [Line2D([0], [0], color=upregulated_color, lw=4, label='Upregulated'),\n",
@@ -259,10 +255,19 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "_IfLruEng39U"
+        "id": "96hPZdTgh4Nx"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> Available colors › [Seaborn Palette](https://raw.githubusercontent.com/moneuron/Volcano-Plot/refs/heads/main/palette.webp)"
+      ],
+      "metadata": {
+        "id": "4L1_ec83KcOl"
+      }
     }
   ]
 }
