--- a/Volcano.ipynb
+++ b/Volcano.ipynb
@@ -136,15 +136,15 @@
         "    else:\n",
         "        return 'B'\n",
         "\n",
-        "data['sort_key'] = np.where(data['logFC'] > 0, -data['logFC'], data['logFC'])  # Sorting key\n",
+        "data['sort_key'] = np.where(data[logfc] > 0, -data[logfc], data[logfc])  # Sorting key\n",
         "\n",
         "data['sort_key2'] = data.apply(sorter, axis=1)\n",
         "\n",
         "# Sort\n",
-        "data = data.sort_values(by=['sort_key2', 'sort_key', 'P.Value'])\n",
+        "data = data.sort_values(by=['sort_key2', 'sort_key', pvalue])\n",
         "\n",
-        "# Drop duplicates by 'Gene.symbol', keeping the best row based on the sort criteria\n",
-        "data = data.drop_duplicates(subset='Gene.symbol', keep='first')\n",
+        "# Drop duplicates by symbol, keeping the best row based on the sort criteria\n",
+        "data = data.drop_duplicates(subset=symbol, keep='first')\n",
         "\n",
         "'''\n",
         "old version:\n",
@@ -200,7 +200,7 @@
         "\n",
         "\n",
         "# Create the volcano plot with paper-friendly coloring\n",
-        "plt.figure(figsize=(plot_width, plot_height))  # Increased figure size for better label placement\n",
+        "plt.figure(figsize=(plot_width, plot_height), dpi=300)  # Increased figure size for better label placement\n",
         "\n",
         "# Custom paper-friendly color palette\n",
         "palette = {'Upregulated': upregulated_color, 'Downregulated': downregulated_color, 'Non-significant': non_significant_color}\n",
