--- a/Volcano.ipynb
+++ b/Volcano.ipynb
@@ -124,6 +124,13 @@
         "file_path = list(uploaded.keys())[0]  # Get the file name from uploaded files\n",
         "data = pd.read_csv(file_path, sep='\\t')\n",
         "\n",
+        "# Split and expand rows in Gene.symbol column\n",
+        "data[symbol] = data[symbol].str.split('///')\n",
+        "data = data.explode(symbol)\n",
+        "\n",
+        "# Reset index for a clean DataFrame\n",
+        "data = data.reset_index(drop=True)\n",
+        "\n",
         "# Create the log10 transformation of the p-values\n",
         "data['-log10(P.Value)'] = -np.log10(data[pvalue])\n",
         "\n",
